@@ -19,11 +19,25 @@
 #include <iostream>
 #include <sstream>
 
+namespace
+{
+  unsigned int calc_num_samples(const Options& options)
+  {
+    if (options.no_validation)
+      return options.num_pub_processes * options.num_pub_participants *
+        options.num_writers * options.num_samples;
+    else
+      return 0;
+  }
+}
+
 DataReaderListenerImpl::DataReaderListenerImpl(const Options& options,
                                                const std::string& process,
                                                unsigned int participant,
                                                unsigned int writer)
   : options_(options)
+  , expected_num_samples_(calc_num_samples(options))
+  , num_samples_(0)
 {
   std::stringstream ss;
   ss << process << "->" << participant << "->" << writer;
@@ -97,8 +111,13 @@ throw(CORBA::SystemException)
               break;
             }
           }
-          std::string process_id(message.process_id.in());
-          processes_[process_id][message.participant_id][message.writer_id].insert(message.sample_id);
+          if (!options_.no_validation) {
+            std::string process_id(message.process_id.in());
+            processes_[process_id][message.participant_id][message.writer_id].insert(message.sample_id);
+          }
+
+          ++num_samples_;
+
         } else if (si.instance_state == DDS::NOT_ALIVE_DISPOSED_INSTANCE_STATE) {
           ACE_DEBUG((LM_DEBUG, ACE_TEXT("%T %N:%l: INFO: instance is disposed\n")));
 
@@ -186,13 +205,24 @@ void DataReaderListenerImpl::report_errors() const
 
 bool DataReaderListenerImpl::done(bool report) const
 {
+  bool valid_and_done = true;
+  if (expected_num_samples_ > 0) {
+    const bool complete = num_samples_ >= expected_num_samples_;
+    if (report && (!complete || num_samples_ > expected_num_samples_)) {
+      std::cout << "ERROR: only received " << num_samples_
+                << " out of " << expected_num_samples_ << " samples for reader "
+                << id_ << "." << std::endl;
+    }
+    return complete;
+  }
+
   if (processes_.size() < options_.num_pub_processes) {
     if (report)
       std::cout << "ERROR: only received samples from "
                 << processes_.size() << " out of "
                 << options_.num_pub_processes << " processes for reader "
                 << id_ << "." << std::endl;
-    return false;
+    valid_and_done = false;
   }
 
   for (ProcessParticipants::const_iterator process = processes_.begin();
@@ -205,7 +235,7 @@ bool DataReaderListenerImpl::done(bool report) const
                   << " participants for " << process->first << " for reader "
                   << id_ << std::endl;
 
-      return false;
+      valid_and_done = false;
     }
     for (ParticipantWriters::const_iterator participant = process->second.begin();
          participant != process->second.end();
@@ -218,7 +248,7 @@ bool DataReaderListenerImpl::done(bool report) const
                     << "->" << participant->first << " for reader "
                     << id_ << std::endl;
 
-        return false;
+        valid_and_done = false;
       }
       for (WriterCounts::const_iterator writer = participant->second.begin();
            writer != participant->second.end();
@@ -235,11 +265,11 @@ bool DataReaderListenerImpl::done(bool report) const
                       << "->" << writer->first << " for reader "
                       << id_ << std::endl;
           }
-          return false;
+          valid_and_done = false;
         }
       }
     }
   }
 
-  return true;
+  return valid_and_done;
 }
